--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <!-- ---------------------------------------body code ------------------------------------------ -->
         <div class="col-lg-10 col-md-12 col-sm-12 bg-primary-subtle pb-5">
             <!-- ----SKILLS--------- -->
-            <div class="row justify-content-center ">
-                <p class="fw-bold">SKILLS</p>
+            <div class="row justify-content-center pt-3 ">
+                <p class="fw-bold ">SKILLS</p>
                 <div class="row gy-2 ">
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card text-center align-items-center py-2">
